--- a/src/main/webapp/adminProductos.xhtml
+++ b/src/main/webapp/adminProductos.xhtml
@@ -23,7 +23,7 @@
 
                         <div class=" col-md-8">
                         <div class="row" style="margin-top: 50px">
-                            <h2>Mi Carrito de Compras</h2>
+                            <h2>Mis productos</h2>
 
                             <h:dataTable value="#{carritoBean.list}" var="oSig" border="1"
                                          headerClass="mdb-color darken-3" 
@@ -33,7 +33,7 @@
                                 </f:facet>
                                 <h:column>
                                     <f:facet name="header">
-                                        <h:outputText value="Nombre del ArtÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â­culo"/>
+                                        <h:outputText value="Nombre del ArtÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â­culo"/>
                                     </f:facet>
                                     <h:outputText value="#{oSig.name}"/>
 
@@ -79,7 +79,7 @@
                                     <tr class="text-white">
                                         <th>#No.</th>
                                         <th>Nombre del Producto</th>
-                                        <th>DescripciÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â³n</th>
+                                        <th>DescripciÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â³n</th>
                                         <th>Precio</th>
                                     </tr>
                                 </thead>
@@ -88,7 +88,7 @@
                                     <tr>
                                         <th scope="row">1</th>
                                         <td>Producto 1</td>
-                                        <td>DescripciÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â³n producto 1</td>
+                                        <td>DescripciÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â³n producto 1</td>
                                         <td>$500.00</td>
                                     </tr>                             
                                 </tbody>
