--- a/src/main/webapp/detalle_producto.xhtml
+++ b/src/main/webapp/detalle_producto.xhtml
@@ -8,7 +8,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/templates/layout.xhtml">
+        <ui:composition template="/WEB-INF/facelets/templates/layout.xhtml">
 
             <ui:define name="content">
                 <div class="col-lg-9">
@@ -35,7 +35,7 @@
 
                         <div class="card card-outline-secondary my-4">
                             <div class="card-header">
-                                InformaciÃ³n del arreglo
+                                InformaciÃƒÂ³n del arreglo
                             </div>
                             <div class="card-body">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
