--- a/src/main/webapp/productos.xhtml
+++ b/src/main/webapp/productos.xhtml
@@ -8,7 +8,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/templates/layout.xhtml">
+        <ui:composition template="/WEB-INF/facelets/templates/layout.xhtml">
 
             <ui:define name="content">
                 <div class="col-lg-9" >             
@@ -21,10 +21,10 @@
                                 <a href="detalleProducto.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""/></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="detalleProducto.html">ArtÃ­culo 1</a>
+                                        <a href="detalleProducto.html">ArtÃƒÂ­culo 1</a>
                                     </h4>
                                     <h5>$24.99</h5>
-                                    <p class="card-text">Â¡informaciÃ³n de la descripcion del producto!</p>
+                                    <p class="card-text">Ã‚Â¡informaciÃƒÂ³n de la descripcion del producto!</p>
                                 </div>
                                 <div class="card-footer">
                                     <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -37,10 +37,10 @@
                                 <a href="detalleProducto.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""/></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="detalleProducto.html">ArtÃ­culo 2</a>
+                                        <a href="detalleProducto.html">ArtÃƒÂ­culo 2</a>
                                     </h4>
                                     <h5>$24.99</h5>
-                                    <p class="card-text">Â¡informaciÃ³n de la descripcion del producto!</p>
+                                    <p class="card-text">Ã‚Â¡informaciÃƒÂ³n de la descripcion del producto!</p>
                                 </div>
                                 <div class="card-footer">
                                     <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -53,10 +53,10 @@
                                 <a href="detalleProducto.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""/></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="detalleProducto.html">ArtÃ­culo 3</a>
+                                        <a href="detalleProducto.html">ArtÃƒÂ­culo 3</a>
                                     </h4>
                                     <h5>$24.99</h5>
-                                    <p class="card-text">Â¡informaciÃ³n de la descripcion del producto!</p>
+                                    <p class="card-text">Ã‚Â¡informaciÃƒÂ³n de la descripcion del producto!</p>
                                 </div>
                                 <div class="card-footer">
                                     <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -69,10 +69,10 @@
                                 <a href="detalleProducto.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""/></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="detalleProducto.html">ArtÃ­culo 4</a>
+                                        <a href="detalleProducto.html">ArtÃƒÂ­culo 4</a>
                                     </h4>
                                     <h5>$24.99</h5>
-                                    <p class="card-text">Â¡informaciÃ³n de la descripcion del producto!</p>
+                                    <p class="card-text">Ã‚Â¡informaciÃƒÂ³n de la descripcion del producto!</p>
                                 </div>
                                 <div class="card-footer">
                                     <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -85,10 +85,10 @@
                                 <a href="detalleProducto.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""/></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="detalleProducto.html">ArtÃ­culo 5</a>
+                                        <a href="detalleProducto.html">ArtÃƒÂ­culo 5</a>
                                     </h4>
                                     <h5>$24.99</h5>
-                                    <p class="card-text">Â¡informaciÃ³n de la descripcion del producto!</p>
+                                    <p class="card-text">Ã‚Â¡informaciÃƒÂ³n de la descripcion del producto!</p>
                                 </div>
                                 <div class="card-footer">
                                     <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -101,10 +101,10 @@
                                 <a href="detalleProducto.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""/></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="detalleProducto.html">ArtÃ­culo 6</a>
+                                        <a href="detalleProducto.html">ArtÃƒÂ­culo 6</a>
                                     </h4>
                                     <h5>$24.99</h5>
-                                    <p class="card-text">Â¡informaciÃ³n de la descripcion del producto!</p>
+                                    <p class="card-text">Ã‚Â¡informaciÃƒÂ³n de la descripcion del producto!</p>
                                 </div>
                                 <div class="card-footer">
                                     <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
