--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,7 +8,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/templates/layout.xhtml">
+        <ui:composition template="/WEB-INF/facelets/templates/layout.xhtml">
 
             <ui:define name="content">
                 <div class="col-lg-9">
