--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -8,7 +8,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/templates/layout.xhtml">
+        <ui:composition template="/WEB-INF/facelets/templates/layout.xhtml">
 
             <ui:define name="contentSide">
 
@@ -56,7 +56,7 @@
 
 
 
-                                                    <h:outputLabel value="ContraseÃ±a" />
+                                                    <h:outputLabel value="ContraseÃƒÂ±a" />
                                                     
                                                     <div style="margin-bottom: 25px" class="input-group">
                                                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
@@ -86,7 +86,7 @@
                                         <div class="form-group">
                                             <div class="col-md-12 control">
                                                 <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
-                                                    AÃºn no tienes cuenta...
+                                                    AÃƒÂºn no tienes cuenta...
                                                     <a href="RegistrarUsuario.html">
                                                         Registrate
                                                     </a>
