--- a/src/main/webapp/adminProductos.xhtml
+++ b/src/main/webapp/adminProductos.xhtml
@@ -30,17 +30,23 @@
                         </div>
 
                         <div class=" col-md-8">
-                            <div class="row" style="margin-top: 50px">
 
-                                 <div class=" col-md-4">
+
+                            <div class="row" style="margin-top: 50px">
+                                <div class=" col-md-4">
                                     <p:outputLabel value="Administracion de productos"></p:outputLabel>
                                 </div>
+                            </div>
 
-                                
-                                 <div class=" col-md-4">
+
+                            <div class="row" >
+                                <div class=" col-md-4">
                                     <p:link outcome="registrarProducto" value="Registrar Producto"></p:link>
                                 </div>
 
+                            </div>
+
+                             <div class="row" style="margin-bottom: 30px">
 
                                 <h:form id="form1">
 
@@ -58,7 +64,7 @@
                                                 <h:outputText value="Nombre"></h:outputText>
                                             </f:facet>
                                             <p:outputLabel value="#{producto.name}"></p:outputLabel>  
-                                         
+
                                         </p:column>
 
                                         <p:column>
@@ -73,7 +79,7 @@
                                             </f:facet>
 
 
-                                              <p:commandButton value="Eliminar" id="eliminar" actionListener="#{productoBean.eliminaProducto(producto.id)}" ajax="false" />
+                                            <p:commandButton value="Eliminar" id="eliminar" actionListener="#{productoBean.eliminaProducto(producto.id)}" ajax="false" />
 
                                         </p:column>
                                     </p:dataTable>
